[project]
name = "tomii-et"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.6",
    "numpy>=1.24,<2.0",
    "opencv-python>=4.8.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.0",
    "websockets>=11.0",
    "torch==2.2.2 ; sys_platform == 'darwin'",
    "torchvision==0.17.2 ; sys_platform == 'darwin'",
    "torchaudio==2.2.2 ; sys_platform == 'darwin'",
    "torch>=2.6.0 ; platform_system == 'Windows'",
    "torchvision>=0.21.0 ; platform_system == 'Windows'",
    "torchaudio>=2.6.0 ; platform_system == 'Windows'",
    "pydantic>=2.12.4",
    "pygame>=2.6.1",
    "dotenv>=0.9.9",
    "wandb>=0.22.3",
    "omegaconf>=2.3.0",
    "insightface>=0.7.3",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.0",
    "mediapipe==0.10.14 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "mediapipe>=0.10.21 ; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "jax>=0.4.26,<0.5 ; (sys_platform == 'darwin' and platform_machine == 'x86_64')",
    "jax>=0.4.26,<0.5 ; (python_version < '3.11') and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "jax>=0.7.1 ; (python_version >= '3.11') and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "jaxlib>=0.4.26,<0.5 ; (sys_platform == 'darwin' and platform_machine == 'x86_64')",
    "jaxlib>=0.4.26,<0.5 ; (python_version < '3.11') and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "jaxlib>=0.7.1 ; (python_version >= '3.11') and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "onnxruntime>=1.16,<2 ; platform_machine != 'x86_64' or sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.16,<2 ; platform_machine == 'x86_64' and sys_platform != 'darwin'",
    "hydra-core>=1.3.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["recording"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
