[project]
name = "araya-eye"
version = "0.1.0"
description = "Utilities and models for the Araya eye tracking pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.10",
    "hydra-core>=1.3",
    "numpy",
    "jax>=0.4.26,<0.5",
    "jaxlib>=0.4.26,<0.5",
    "torch",
    "opencv-python",
    "mediapipe",
    "onnxruntime",
    "pandas",
    "seaborn",
    "scikit-learn",
    "tqdm",
    "insightface",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["araya_eye*"]
